<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="64dp"
    android:paddingRight="64dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.webwemser.letsmeetapp.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_name"
        android:textSize="48sp"
        android:textColor="@color/black"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username_text"
        android:hint="@string/user_hint"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:lines="1"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:maxLength="20"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pw_hint"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:lines="1"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:maxLength="20"
        android:id="@+id/password_text"/>

    <CheckedTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/save_credentials"
        android:textSize="20sp"
        android:id="@+id/check1"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:textColor="@color/black"
        android:checkMark="?android:attr/listChoiceIndicatorMultiple"
        android:clickable="true"/>

    <CheckedTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_login"
        android:textSize="20sp"
        android:id="@+id/check2"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:textColor="@color/black"
        android:checkMark="?android:attr/listChoiceIndicatorMultiple"
        android:clickable="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_button"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:background="@drawable/mybutton"
            android:onClick="login"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:background="@drawable/mybutton"
            android:onClick="signupActivty"/>

    </LinearLayout>

</LinearLayout>

